--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <div class="container">
         <h5>Welcome To The</h5>
         <h1>House of Haunt 4</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum reprehenderit, commodi modi in sed temporibus neque molestias animi facere incidunt tenetur soluta quo veritatis ullam exercitationem amet praesentium tempore reiciendis.</p>
+        <p>We all used to play connect 4 board game. It's pretty fun and engaging. But instead of it being a common connect 4 board game, how about we make it scary, to give you the chills while playing. </p>
         <br>
-        <button>Start Playing</button>
+        <button onclick="window.location.href = '/game-screen.html'">Start Playing</button>
     </div>
     
 </body>
