--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <img src="assets/logo.svg" alt="logo">
         </div>
         <div class="nav-container">
-            <a href="/">Home</a>
-            <a href="/game-screen.html">Play</a>
+            <a href="">Home</a>
+            <a href="game-screen.html">Play</a>
         </div>
     </nav>
 
@@ -23,7 +23,7 @@
         <h1>House of Haunt 4</h1>
         <p>We all used to play connect 4 board game. It's pretty fun and engaging. But instead of it being a common connect 4 board game, how about we make it scary, to give you the chills while playing. </p>
         <br>
-        <button onclick="window.location.href = '/game-screen.html'">Start Playing</button>
+        <button onclick="window.location.href = 'game-screen.html'">Start Playing</button>
     </div>
     
 </body>
